front: fix double scroll on rolling stock selector

--- a/front/src/common/BootstrapSNCF/ModalSNCF/style.scss
+++ b/front/src/common/BootstrapSNCF/ModalSNCF/style.scss
@@ -3,7 +3,7 @@
     position: relative;
     .modal-body {
       overflow: auto;
-      max-height: 60vh;
+      max-height: 90vh;
     }
     .modal-footer {
       padding-top: 0.5rem;
